@@ -12,6 +12,8 @@ import com.example.loanova.exception.ResourceNotFoundException;
 import com.example.loanova.repository.BranchRepository;
 import com.example.loanova.repository.RoleRepository;
 import com.example.loanova.repository.UserRepository;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import java.util.List;
@@ -19,7 +21,6 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
-// @RequiredArgsConstructor
 public class UserService {
 
         private final UserRepository userRepository;
@@ -41,13 +42,26 @@ public class UserService {
         /*
          * Mendapatkan semua User yang ada di sistem (auto exclude deleted via @Where)
          */
+        @Cacheable(value = "users")
         public List<UserResponse> getAllUser() {
                 return userRepository.findAll().stream()
                                 .map(this::toResponse)
-                                .toList();
+                                .collect(Collectors.toList());
+        }
+
+        /*
+         * Mendapatkan User berdasarkan ID
+         */
+        @Cacheable(value = "user", key = "#id")
+        public UserResponse getUserById(Long id) {
+                User user = userRepository.findById(id)
+                                .orElseThrow(() -> new ResourceNotFoundException(
+                                                "Maaf, tidak ada data user dengan id " + id));
+                return toResponse(user);
         }
 
         /* Menambahkan User baru ke dalam sistem */
+        @CacheEvict(value = "users", allEntries = true)
         public UserResponse createUser(UserRequest request) {
                 if (userRepository.existsByUsername(request.getUsername())) {
                         throw new DuplicateResourceException("Username sudah digunakan");
@@ -85,6 +99,7 @@ public class UserService {
         }
 
         /* Mengupdate data user */
+        @CacheEvict(value = {"user", "users"}, key = "#id", allEntries = true)
         public UserResponse updateUser(Long id, UserUpdateRequest request) {
                 User user = userRepository.findById(id)
                                 .orElseThrow(() -> new ResourceNotFoundException(
@@ -127,6 +142,7 @@ public class UserService {
         }
 
         /* Soft delete - menandai user sebagai deleted tanpa menghapus dari database */
+        @CacheEvict(value = {"user", "users"}, key = "#id", allEntries = true)
         public void deleteUser(Long id) {
                 User user = userRepository.findById(id)
                                 .orElseThrow(() -> new ResourceNotFoundException(
